# invoice

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.dvc/: config
data/: .gitignore  README.md  SROIE2019.dvc  app.py  create_dataframe.py  labels.json  labels.json.dvc  test_labels.json  test_labels.json.dvc  train.json  validate_labels.py
models/layoutlmv3-finetuned-lora/checkpoint-1000/: adapter_config.json  adapter_model.safetensors  scheduler.pt  trainer_state.json
models/layoutlmv3-finetuned-lora/checkpoint-1500/: README.md  adapter_model.safetensors  scheduler.pt  trainer_state.json
models/layoutlmv3-finetuned-lora/checkpoint-2000/: adapter_model.safetensors  scheduler.pt  trainer_state.json
models/layoutlmv3-finetuned-lora/checkpoint-2490/: adapter_model.safetensors  scheduler.pt  trainer_state.json
models/layoutlmv3-finetuned-lora/checkpoint-500/: adapter_model.safetensors  scheduler.pt  trainer_state.json
models/layoutlmv3-lora/: training_config.json
models/layoutlmv3-lora-invoice-number/: README.md  adapter_config.json  training_config.json
notebooks/: 01_heuristics.ipynb  02_labeling.ipynb  03_inference.ipynb
scripts/: fintune_lora.py  preprocess.py  train.py  train_qa_layoutlmv3.py
